[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Waifu/EggContainer/EggContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Waifu/WaifuPod/WaifuPod.gd" type="Script" id=2]
[ext_resource path="res://Assets/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Waifu/WaifuPod/WaifuPod.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/Waifu/WaifuPod/PodConfigurator.gd" type="Script" id=5]
[ext_resource path="res://Assets/Waifu/WaifuPod/PodConfigurator.obj" type="ArrayMesh" id=6]

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.152941, 0.152941, 0.152941, 1 )
roughness = 0.45

[sub_resource type="ViewportTexture" id=30]
viewport_path = NodePath("WaifuPodMesh/Display/Viewport")

[sub_resource type="BoxShape" id=31]

[sub_resource type="SpatialMaterial" id=32]
albedo_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[sub_resource type="SpatialMaterial" id=33]
albedo_color = Color( 0.921569, 0.835294, 0.301961, 1 )

[sub_resource type="SpatialMaterial" id=35]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 3.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=34]
extents = Vector3( 0.05, 0.2, 0.05 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="GradientTexture2D" id=36]

[node name="WaifuPod" type="StaticBody"]
script = ExtResource( 2 )
current_waifu = "NoWaifuSelected"

[node name="WaifuPodMesh" type="MeshInstance" parent="."]
mesh = ExtResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 29 )

[node name="Display" type="Sprite3D" parent="WaifuPodMesh"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.15, 0, 0.554, -0.01 )
flip_h = true
flip_v = true
texture = SubResource( 30 )

[node name="Viewport" type="Viewport" parent="WaifuPodMesh/Display"]
size = Vector2( 225, 350 )
transparent_bg = true

[node name="VideoPlayer" type="VideoPlayer" parent="WaifuPodMesh/Display/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
autoplay = true

[node name="EggCounter" type="RichTextLabel" parent="WaifuPodMesh/Display/Viewport"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 275.0
margin_right = 227.0
margin_bottom = 325.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
text = "0"
scroll_active = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.375, 0, 0, 0, 0.555, 0, 0, 0, 0.038, 0, 0.555, 0 )
shape = SubResource( 31 )

[node name="EggContainer" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0, 0 )

[node name="PodConfigurator" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
script = ExtResource( 5 )

[node name="PodConfiguratorMesh" type="MeshInstance" parent="PodConfigurator"]
mesh = ExtResource( 6 )
skeleton = NodePath("../..")
material/0 = SubResource( 32 )
material/1 = SubResource( 33 )
material/2 = SubResource( 32 )
material/3 = SubResource( 35 )

[node name="CollisionShape" type="CollisionShape" parent="PodConfigurator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
shape = SubResource( 34 )

[node name="ConfigUI" type="Control" parent="PodConfigurator"]
visible = false
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
theme = ExtResource( 3 )

[node name="BG" type="Panel" parent="PodConfigurator/ConfigUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="RichTextLabel" parent="PodConfigurator/ConfigUI"]
margin_left = 26.0
margin_top = 10.0
margin_right = 366.0
margin_bottom = 71.0
text = "Pod Settings"
fit_content_height = true
scroll_active = false

[node name="CloseButton" type="Button" parent="PodConfigurator/ConfigUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 71.0
text = "X"

[node name="ChooseWaifuDropdown" type="OptionButton" parent="PodConfigurator/ConfigUI"]
anchor_right = 1.0
margin_left = 50.0
margin_top = 120.0
margin_right = -50.0
margin_bottom = 170.0
text = "Select Waifu"

[node name="PodStats" type="RichTextLabel" parent="PodConfigurator/ConfigUI"]
anchor_right = 1.0
margin_left = 50.0
margin_top = 200.0
margin_right = 764.0
margin_bottom = 400.0
rect_scale = Vector2( 0.666, 0.666 )
custom_colors/default_color = Color( 1, 0.227451, 0.521569, 1 )
text = "Egg Per Fragment: 0
Pod Multiplier: 0x
Auto-Harvest/Min: 0"
scroll_active = false

[node name="UpgradesContainerBG" type="Panel" parent="PodConfigurator/ConfigUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 400.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 5 )

[node name="UpgradesContainerScroll" type="ScrollContainer" parent="PodConfigurator/ConfigUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 415.0
margin_right = -60.0
margin_bottom = -60.0
scroll_horizontal_enabled = false

[node name="UpgradesContainer" type="VBoxContainer" parent="PodConfigurator/ConfigUI/UpgradesContainerScroll"]
margin_right = 601.0
margin_bottom = 138.0

[node name="Button1" type="Button" parent="PodConfigurator/ConfigUI/UpgradesContainerScroll/UpgradesContainer"]
margin_right = 601.0
margin_bottom = 64.0
text = "Multiplier +0.1 = 100g"
icon = SubResource( 36 )
flat = true
align = 0

[node name="Button2" type="Button" parent="PodConfigurator/ConfigUI/UpgradesContainerScroll/UpgradesContainer"]
margin_top = 74.0
margin_right = 601.0
margin_bottom = 138.0
text = "Unlock Auto Harvestor = 500g"
icon = SubResource( 36 )
flat = true
align = 0

[node name="AutoHarvestTimer" type="Timer" parent="."]
wait_time = 10.0
